--- a/config/.env-vars
+++ b/config/.env-vars
@@ -2,10 +2,10 @@
 export GCP_PROJECT=h-pfolio-2
 echo GCP_PROJECT: ${GCP_PROJECT}
 
-export GCP_APP_NAME=image_upload_v2
+export GCP_APP_NAME=image-upload-v2
 echo GCP_APP_NAME: ${GCP_APP_NAME}
 
-gcloud projects describe $GCP_PROJECT --format='value(projectNumber)'
+# gcloud projects describe $GCP_PROJECT --format='value(projectNumber)'
 # ---
 # export GCP_PROJECT_ID=58856964484 # heidlessemail10@gmail.com
 export GCP_PROJECT_ID=669532112637 # heidlessemail11@gmail.com
