--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,6 +6,18 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+google:
+  service: GCS
+  project: image_upload
+  credentials: <%= Rails.application.credentials.dig(:gcs_storage, :gcs_keyfile) %>
+  bucket: <%= Rails.application.credentials.dig(:gcs_storage, :gcs_bucket) %>
+
+google_dev:
+  service: GCS
+  project: image_upload
+  credentials: <%= Rails.application.credentials.dig(:gcs_storage, :gcs_keyfile) %>
+  bucket: <%= Rails.application.credentials.dig(:gcs_storage, :gcs_bucket) %>
+
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
